--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.zhenhui.library</groupId>
-    <artifactId>spring-redis-simplify</artifactId>
+    <artifactId>spring-jedis-simplify</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
